# cmd/authentication/doc/swagger.yaml
@@ -62,29 +62,6 @@ info:
   version: v0
 paths:
   /api/user/{id}:
-    get:
-      description: GetUserByID
-      operationId: GetUserByID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "500":
-          description: Internal Server Error
-      summary: GetUserByID
-      tags:
-      - User
     put:
       description: Edit User
       operationId: UpdateUserByID
@@ -165,6 +142,26 @@ paths:
       security:
       - BearerAuth: []
       summary: Change Password
+      tags:
+      - User
+  /api/users:
+    get:
+      description: GetAllUsers
+      operationId: GetAllUsers
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: GetAllUsers
       tags:
       - User
   /auth/login:
